--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Hello Facebook</title>
+    <title>Solidarize</title>
 </head>
 <body>
-<h3>Hello, <span th:text="${facebookProfile.name}">Some User</span>!</h3>
-
-<h4>Here is your feed:</h4>
+<h3>Bem Vindo ao <span th:text="${name}"></span>!</h3>
 
 </body>
 </html>
