--- a/src/main/resources/templates/event/listEvent.html
+++ b/src/main/resources/templates/event/listEvent.html
@@ -5,19 +5,19 @@
     <title>Solidarize - Todos juntos por um mundo melhor</title>
     
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
 
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
     
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../style/solidarize.css" />
+    <link rel="stylesheet" href="../../style/solidarize.css" />
     
 </head>
 <body>
@@ -37,8 +37,8 @@
 
             <div class="collapse navbar-collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Eventos</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li class="active"><a href="#">Eventos</a></li>
                     <li><a href="#">Sobre</a></li>
                 </ul>
                 <form action="/connect/facebook" method="POST">
@@ -50,42 +50,62 @@
             </div>
         </div>
     </nav><!-- End Header -->
-    
-<!-- Section Destaques -->
-    <div class="row destaques">
-        <div class="col-md-12">
-            <h2 class="h2-destaques">solidarize</h2>
-            <h3 class="h3-destaques">Todos juntos em busca de um mundo melhor!</h3><br/><br/>     
-            <br/><br/>
- 
-            <center><img class="img-responsive" src="../style/background.png" style="margin:0px;"/></center>
-        </div>
-    </div> 
 
-    <div class="row">
-        <div class="destaques-footer">
-            <h4>O Solidarize foi criado com a intenção de divulgar serviços de cunho social
-                e unir instituições a pessoas que tem o interesse de contribuir.</h4>
-            <button class="btn btn-destaque">saiba mais</button>
-        </div>
-    </div><!-- Fim Section Destaques -->
+<!-- Listagem de eventos -->
+    <div class="row content-blog">
+        <div class="col-md-6 col-md-offset-1">
+        
+        <!-- Evento -->
+            <div class="row">
+                <p><img src="../../image/evento.jpg" class="img-responsive img-thumbnail" width="100%"/></p>
+            </div>
+            
+            <div class="row">
+                
+                <div class="post-date">
+                    <i class="fa fa-calendar fa-2x"></i><br/>
+                    <span class="month">ABR</span><br/>
+                    <span class="day">28</span><br/>
+                    <hr class="hr-date"/>
+                    <div>
+                        <span class="like-box-heart">
+                            <i class="fa fa-heart"></i>
+                        </span>
+                        <span class="like-box-score">
+                            <b>2500</b>
+                        </span>
+                    </div>
+                </div>    
 
-<!-- Conteudo principal -->
-    <div class="row content">
-        <h1>Eventos em destaques:</h1>
-        <div class="col-md-4">
-            <h3>evento 1</h3>
+                <div class="float-right">
+                    <h2 class="post-Title">Titulo do evento</h2>
+                    <h4 class="post-sub-title">Subtitulo do evento</h4>
+                    <p class="post-info">
+                        <i class="fa fa-university"></i> <a href="#">Instituição</a> | 
+                        <i class="fa fa-map-o"></i> Endereço | 
+                        <i class="fa fa-clock-o"></i> Horário
+                    </p>
+                    
+                    <div style="text-align: justify">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
+                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
+                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                        deserunt mollit anim id est laborum.
+                        <button class="btn btn-read-more pull-right">Leia mais &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
+                    </div>
+                </div>
+                <br/><br/><br/><br/>
+            </div> <!-- Evento -->
+            
+        
         </div>
         
-        <div class="col-md-4">
-            <h3>evento 2</h3>
+        <div class="col-md-1"></div>
+        <div class="col-md-3 col-md-offset-1">
+            <h3></h3>
         </div>
-        
-        <div class="col-md-4">
-            <h3>evento 3</h3>
-        </div>
-    </div>
-<!-- Fim Conteudo principal -->
+    </div> <!-- Fim Listagem de eventos -->
 
 <!-- Footer -->
     <footer class="text-center">
