--- a/src/main/resources/templates/event/listEvent.html
+++ b/src/main/resources/templates/event/listEvent.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
     <title>Solidarize - Todos juntos por um mundo melhor</title>
-    
+
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
@@ -13,148 +13,159 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-    
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    
+
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../../style/solidarize.css" />
-    
+    <link rel="stylesheet" href="../../style/solidarize.css"/>
+
 </head>
 <body>
 <!-- Start Header -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                  <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html" title="Solidarize">
-                  Solidarize
-                </a>
-            </div>
-
-            <div class="collapse navbar-collapse navbar-collapse" id="myNavbar">
-                <ul class="nav navbar-nav">
-                    <li><a href="#">Home</a></li>
-                    <li class="active"><a href="#">Eventos</a></li>
-                    <li><a href="#">Sobre</a></li>
-                </ul>
-                <form action="/connect/facebook" method="POST">
-                    <input type="hidden" name="scope" value="user_posts" />
-                    <p class="navbar-text navbar-right" style="margin-top: 7px; margin-bottom: 5px; margin-right: 10px">
-                        <button type="submit" class="btn btn-success">Conectar com Facebook</button>
-                    </p>
-                </form>
-            </div>
+<nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html" title="Solidarize">
+                Solidarize
+            </a>
         </div>
-    </nav><!-- End Header -->
+
+        <div class="collapse navbar-collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Home</a></li>
+                <li class="active"><a href="#">Eventos</a></li>
+                <li><a href="#">Sobre</a></li>
+            </ul>
+            <form action="/connect/facebook" method="POST">
+                <input type="hidden" name="scope" value="user_posts"/>
+                <p class="navbar-text navbar-right" style="margin-top: 7px; margin-bottom: 5px; margin-right: 10px">
+                    <button type="submit" class="btn btn-success">Conectar com Facebook</button>
+                </p>
+            </form>
+        </div>
+    </div>
+</nav><!-- End Header -->
 
 <!-- Listagem de eventos -->
-    <div class="row content-blog">
-        <div class="col-md-6 col-md-offset-1">
-        
-        <!-- Evento -->
-            <div class="row">
-                <p><img src="../../image/evento.jpg" class="img-responsive img-thumbnail" width="100%"/></p>
-            </div>
-            
-            <div class="row">
-                
-                <div class="post-date">
-                    <i class="fa fa-calendar fa-2x"></i><br/>
-                    <span class="month">ABR</span><br/>
-                    <span class="day">28</span><br/>
-                    <hr class="hr-date"/>
-                    <div>
-                        <span class="like-box-heart">
-                            <i class="fa fa-heart"></i>
-                        </span>
-                        <span class="like-box-score">
-                            <b>2500</b>
-                        </span>
-                    </div>
-                </div>    
+<div class="row content-blog">
+    <div class="col-md-6 col-md-offset-1" id="eventList">
+        <!-- Event List go here -->
+    </div>
 
-                <div class="float-right">
-                    <h2 class="post-Title">Titulo do evento</h2>
-                    <h4 class="post-sub-title">Subtitulo do evento</h4>
-                    <p class="post-info">
-                        <i class="fa fa-university"></i> <a href="#">Instituição</a> | 
-                        <i class="fa fa-map-o"></i> Endereço | 
-                        <i class="fa fa-clock-o"></i> Horário
-                    </p>
-                    
-                    <div style="text-align: justify">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut 
-                        aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
-                        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-                        deserunt mollit anim id est laborum.
-                        <button class="btn btn-read-more pull-right">Leia mais &nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-angle-right"></i></button>
-                    </div>
-                </div>
-                <br/><br/><br/><br/>
-            </div> <!-- Evento -->
-            
-        
-        </div>
-        
-        <div class="col-md-1"></div>
-        <div class="col-md-3 col-md-offset-1">
-            <h3></h3>
-        </div>
-    </div> <!-- Fim Listagem de eventos -->
+    <div class="col-md-1"></div>
+    <div class="col-md-3 col-md-offset-1">
+        <h3></h3>
+    </div>
+</div> <!-- Fim Listagem de eventos -->
 
 <!-- Footer -->
-    <footer class="text-center">
-        <div class="footer-above">
-            <div class="container">
-                <div class="row">
-                    <div class="footer-col col-md-4">
-                        <h3></h3>
-                        <p></p>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h2>NOSSAS MÍDIAS</h2>
-                        <br/>   
-                        <ul class="list-inline">
-                            <li>
-                                <a href="#" class="btn-social"><i class="fa fa-fw fa-facebook"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social"><i class="fa fa-fw fa-git"></i></a>
-                                
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
-                            </li>
-                            <li>
-                                <a href="#" class="btn-social"><i class="fa fa-fw fa-dribbble"></i></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3></h3>
-                        <p></p>
-                    </div>
+<footer class="text-center">
+    <div class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col col-md-4">
+                    <h3></h3>
+                    <p></p>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h2>NOSSAS MÍDIAS</h2>
+                    <br/>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#" class="btn-social"><i class="fa fa-fw fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social"><i class="fa fa-fw fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social"><i class="fa fa-fw fa-git"></i></a>
+
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social"><i class="fa fa-fw fa-linkedin"></i></a>
+                        </li>
+                        <li>
+                            <a href="#" class="btn-social"><i class="fa fa-fw fa-dribbble"></i></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer-col col-md-4">
+                    <h3></h3>
+                    <p></p>
                 </div>
             </div>
         </div>
-        <div class="footer-below">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        Copyright &copy; Solidarize 2017
-                    </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; Solidarize 2017
                 </div>
             </div>
         </div>
-    </footer><!-- End Footer -->
-    
+    </div>
+</footer><!-- End Footer -->
+<form th:action="@{/events}" id="getEvents">
+</form>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+
+    function evento(description, title, subTitle,address,eventTime, rank, month,day) {
+      return "<div class=\"row\">\
+    <p><img src=\"../../image/evento.jpg\" class=\"img-responsive img-thumbnail\" width=\"100%\"/></p>\
+        </div>\
+        <div class=\"row\">\
+    <div class=\"post-date\">\
+    <i class=\"fa fa-calendar fa-2x\"></i><br/>\
+        <span class=\"month\">"+month+"</span><br/>\
+        <span class=\"day\">"+day+"</span><br/>\
+        <hr class=\"hr-date\"/>\
+        <div>\
+        <span class=\"like-box-heart\">\
+        <i class=\"fa fa-heart\"></i>\
+        </span>\
+        <span class=\"like-box-score\">\
+        <b>"+ rank+"</b>\
+        </span>\
+        </div>\
+        </div>\
+        <div class=\"float-right\">\
+        <h2 class=\"post-Title\">"+title+"</h2>\
+    <h4 class=\"post-sub-title\">"+subTitle+"</h4>\
+    <p class=\"post-info\">\
+        <i class=\"fa fa-university\"></i> <a href=\"#\">Instituição</a> |\
+        <i class=\"fa fa-map-o\"></i> "+address+" |\
+        <i class=\"fa fa-clock-o\"></i> "+eventTime+"\
+        </p>\
+        <div style=\"text-align: justify\">"+ description+ "\
+    <button class=\"btn btn-read-more pull-right\">Leia mais &nbsp;&nbsp;&nbsp;&nbsp;<i class=\"fa fa-angle-right\"></i></button>\
+        </div>\
+        </div>\
+        <br/><br/><br/><br/>\
+        ";
+    }
+    url = $('#getEvents').attr('action');
+
+
+
+    $.get(url + "?offset=10&order=desc", function (data) {
+        data.forEach(function (event) {
+            var eventDate = new Date(event.event_time);
+            var month = {0:"JAR", 1: "FEV", 2:"MAR", 3: "ABR", 4: "MAI", 5:"JUN", 6:"JUL",7:"AGO",8:"SET",9:"OUT",10:"NOV",11:"DEZ"};
+            $('#eventList').append(evento(event.description,
+                event.title, event.sub_title,event.address,event.event_time,event.rank,month[eventDate.getUTCMonth()],eventDate.getUTCDate()));
+        })
+
+    })
+
+    /*]]>*/
+</script>
 </body>
 </html>
