--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../style/solidarize.css" />
+    <link rel="stylesheet" href="../static/style/solidarize.css" />
     
 </head>
 <body>
@@ -38,8 +38,8 @@
             <div class="collapse navbar-collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Eventos</a></li>
-                    <li><a href="#">Sobre</a></li>
+                    <li><a href="event/listEvent.html">Eventos</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
                 </ul>
                 <form action="/connect/facebook" method="POST">
                     <input type="hidden" name="scope" value="user_posts" />
@@ -58,7 +58,7 @@
             <h3 class="h3-destaques">Todos juntos em busca de um mundo melhor!</h3><br/><br/>     
             <br/><br/>
  
-            <center><img class="img-responsive" src="../style/background.png" style="margin:0px;"/></center>
+            <center><img class="img-responsive" src="../static/style/background.png" style="margin:0px;"/></center>
         </div>
     </div> 
 
@@ -66,24 +66,15 @@
         <div class="destaques-footer">
             <h4>O Solidarize foi criado com a intenção de divulgar serviços de cunho social
                 e unir instituições a pessoas que tem o interesse de contribuir.</h4>
-            <button class="btn btn-destaque">saiba mais</button>
+            <a class="btn btn-destaque" href="sobre.html">saiba mais</a>
         </div>
     </div><!-- Fim Section Destaques -->
 
 <!-- Conteudo principal -->
     <div class="row content">
         <h1>Eventos em destaques:</h1>
-        <div class="col-md-4">
-            <h3>evento 1</h3>
-        </div>
         
-        <div class="col-md-4">
-            <h3>evento 2</h3>
-        </div>
         
-        <div class="col-md-4">
-            <h3>evento 3</h3>
-        </div>
     </div>
 <!-- Fim Conteudo principal -->
 
@@ -136,5 +127,61 @@
         </div>
     </footer><!-- End Footer -->
     
+<form th:action="@{/events}" id="getEvents">
+</form>
+
+<script th:inline="javascript">
+    /*<![CDATA[*/
+
+    function evento(description, title, subTitle,address,eventTime, rank, month,day) {
+      return "<div class=\"col-md-4\" style=\"padding: 10px 20px 10px 20px\">\
+    <div class=\"row\">\
+    <p><img src=\"../../image/evento.jpg\" class=\"img-responsive img-thumbnail\" width=\"100%\"/></p>\
+        </div>\
+        <div class=\"row\">\
+    <div class=\"post-date\">\
+    <i class=\"fa fa-calendar fa-2x\"></i><br/>\
+        <span class=\"month\">"+month+"</span><br/>\
+        <span class=\"day\">"+day+"</span><br/>\
+        <hr class=\"hr-date\"/>\
+        <div>\
+        <span class=\"like-box-heart\">\
+        <i class=\"fa fa-heart\"></i>\
+        </span>\
+        <span class=\"like-box-score\">\
+        <b>"+ rank+"</b>\
+        </span>\
+        </div>\
+        </div>\
+        <div class=\"float-right\">\
+        <h2 class=\"post-Title\">"+title+"</h2>\
+    <h4 class=\"post-sub-title\">"+subTitle+"</h4>\
+    <p class=\"post-info\">\
+        <i class=\"fa fa-university\"></i> <a href=\"#\">Instituição</a> <br/>\
+        <i class=\"fa fa-map-o\"></i> "+address+" <br/>\
+        <i class=\"fa fa-clock-o\"></i> "+eventTime+"\
+        <button class=\"btn btn-read-more pull-right\">Leia mais &nbsp;&nbsp;&nbsp;&nbsp;<i class=\"fa fa-angle-right\"></i></button>\
+        </p>\
+        </div></div>\
+        <br/><br/><br/><br/>\
+        ";
+    }
+    url = $('#getEvents').attr('action');
+
+
+
+    $.get(url + "?offset=10&order=desc", function (data) {
+        data.forEach(function (event) {
+            var eventDate = new Date(event.event_time);
+            var month = {0:"JAR", 1: "FEV", 2:"MAR", 3: "ABR", 4: "MAI", 5:"JUN", 6:"JUL",7:"AGO",8:"SET",9:"OUT",10:"NOV",11:"DEZ"};
+            $('#eventList').append(evento(event.description,
+                event.title, event.sub_title,event.address,event.event_time,event.rank,month[eventDate.getUTCMonth()],eventDate.getUTCDate()));
+        })
+
+    })
+
+    /*]]>*/
+</script>
+
 </body>
 </html>
