--- a/src/main/resources/templates/event/listEvent.html
+++ b/src/main/resources/templates/event/listEvent.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="../../style/solidarize.css"/>
+    <link rel="stylesheet" href="style/solidarize.css"/>
 
 </head>
 <body>
