Add Sobre and Index pages to the Main UI

--- a/src/main/resources/templates/event/registryEvent.html
+++ b/src/main/resources/templates/event/registryEvent.html
@@ -30,16 +30,16 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html" title="Solidarize">
+                <a class="navbar-brand" href="/index" title="Solidarize">
                   Solidarize
                 </a>
             </div>
 
             <div class="collapse navbar-collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li><a href="../index.html">Home</a></li>
-                    <li class="active"><a href="event/listEvent.html">Eventos</a></li>
-                    <li><a href="../sobre.html">Sobre</a></li>
+                    <li><a href="/index">Home</a></li>
+                    <li class="active"><a href="/listEvent">Eventos</a></li>
+                    <li><a href="/sobre">Sobre</a></li>
                 </ul>
                 <form action="/connect/facebook" method="POST">
                     <input type="hidden" name="scope" value="user_posts" />
@@ -97,7 +97,7 @@
                                     <option selected="true" value="UF">UF</option>
                                     <option value="PR">PR</option>
                                     <option value="SC">SC</option>
-                                    <option value="RS">RS</option>                               
+                                    <option value="RS">RS</option>
                                 </select>
                                 <input tabindex="4" type="text" class="form-control" placeholder="Cidade"
                                    aria-describedby="basic-addon1" name="city" id="eventCity"
